# golem-llm

./: Cargo.toml
.cargo/: config.toml
search/: Cargo.toml
search-elastic/: Cargo.toml  golem.yaml
search-elastic/src/: component.rs  lib.rs
search-opensearch/: Cargo.toml  golem.yaml
search-opensearch/src/: component.rs  lib.rs
search-opensearch/tests/: core_tests.rs
search/src/: lib.rs
search/wit/: deps.toml  golem-search.wit
wit/golem-search/: golem-search.wit
