[package]
name = "search-elastic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elasticsearch = { version = "9.0.0-alpha.1", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
