[package]
name = "search-elastic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
elasticsearch = { version = "9.0.0-alpha.1", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
httpmock = { version = "0.6", default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
